implement RTC codes

--- a/Mapper_gmapping.conf
+++ b/Mapper_gmapping.conf
@@ -94,21 +94,45 @@
 ## - hash:         {key0: value0, key1:, value0, ...}
 ##
 # conf.__widget__.debug, text
-# conf.__widget__.start_map_update_in_activated, spin
-# conf.__widget__.x_min, spin
-# conf.__widget__.x_max, spin
-# conf.__widget__.y_min, spin
-# conf.__widget__.y_max, spin
-# conf.__widget__.resolution, spin
-# conf.__widget__.init_pose_x, spin
-# conf.__widget__.init_pose_y, spin
-# conf.__widget__.init_pose_th, spin
-# conf.__widget__.log_dir, spin
-# conf.__widget__.log_enable, spin
+# conf.__widget__.sigma, text
+# conf.__widget__.kernelSize, text
+# conf.__widget__.lstep, text
+# conf.__widget__.astep, text
+# conf.__widget__.iterations, text
+# conf.__widget__.lsigma, text
+# conf.__widget__.ogain, text
+# conf.__widget__.lskip, text
+# conf.__widget__.minimumScore, text
+# conf.__widget__.srr, text
+# conf.__widget__.srt, text
+# conf.__widget__.str, text
+# conf.__widget__.stt, text
+# conf.__widget__.linearUpdate, text
+# conf.__widget__.angularUpdate, text
+# conf.__widget__.temporalUpdate, text
+# conf.__widget__.resampleThreshold, text
+# conf.__widget__.particles, text
+# conf.__widget__.xmin, text
+# conf.__widget__.ymin, text
+# conf.__widget__.xmax, text
+# conf.__widget__.ymax, text
+# conf.__widget__.delta, text
+# conf.__widget__.llsamplerange, text
+# conf.__widget__.llsamplestep, text
+# conf.__widget__.lasamplerange, text
+# conf.__widget__.lasamplestep, text
+# conf.__widget__.transform_publish_period, text
+# conf.__widget__.occ_thresh, text
+# conf.__widget__.throttle_scans, text
 
 
-# conf.__constraints__.start_map_update_in_activated, true,false
-# conf.__constraints__.log_enable, true,false
+# conf.__constraints__.int_param0: 0<=x<=150
+# conf.__constraints__.int_param1: 0<=x<=1000
+# conf.__constraints__.double_param0: 0<=x<=100
+# conf.__constraints__.double_param1:
+# conf.__constraints__.str_param0: (default,mode0,mode1)
+# conf.__constraints__.vector_param0: (dog,monky,pheasant,cat)
+# conf.__constraints__.vector_param1: (pita,gora,switch)
 
 ##============================================================
 ## Execution context settings
