--- a/include/Mapper_gmapping/CMakeLists.txt
+++ b/include/Mapper_gmapping/CMakeLists.txt
@@ -1,8 +1,4 @@
 set(hdrs Mapper_gmapping.h
+    MapperSVC_impl.h
     PARENT_SCOPE
-    MobileRobotSVC_impl.h
     )
-
-install(FILES ${hdrs} DESTINATION ${INC_INSTALL_DIR}/${PROJECT_NAME_LOWER}
-    COMPONENT library)
-
